--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
       <!--  jQuery 1.7+  -->
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="assets/style/responsive.css">
-    <title>React App</title>
+    <title>FenceCRM | One CRM for all your Needs</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
