--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,16 @@
         });
         
         });
+//         $( function(){ 
+//      var navMain = $(".navbar-collapse");
+
+//      navMain.on("click", "a", null, function () {
+//          navMain.collapse('hide');
+//      });
+//  });
+// $('.disbale-nav').on('click',function() {
+//   $('.navbar-collapse').collapse('hide');
+// });
      </script>
   </body>
 
