--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <!-- <link rel="stylesheet" href="assets/carousel/owl-carousel/owl.carousel.css"> -->
       <!-- Default Theme -->
@@ -51,18 +53,18 @@
 // $('.disbale-nav').on('click',function() {
 //   $('.navbar-collapse').collapse('hide');
 // });
-let interval = 0 
-  setInterval(function() {
+// let interval = 0 
+//   setInterval(function() {
  
-  if (interval % 2 === 0) {
-    document.getElementById('profile-tab').click();
-   }
-   if(interval % 2 === 1){
-    document.getElementById('home-tab').click();
-   }
-   interval++;
+//   if (interval % 2 === 0) {
+//     document.getElementById('profile-tab').click();
+//    }
+//    if(interval % 2 === 1){
+//     document.getElementById('home-tab').click();
+//    }
+//    interval++;
 
-}, 5000);
+// }, 5000);
      </script>
   </body>
 
